dynamix/force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Days_after_Booking__c.field-meta.xml
<CustomField>
    <fullName>Days_after_Booking__c</fullName>
    <label>Days after Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>