dynamix/force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Milestone_Activation__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Activation__c</fullName>
    <label>Milestone Activation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Date</fullName>
            </value>
            <value>
                <fullName>Project Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>