dynamix/force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Milestone_age__c.field-meta.xml
<CustomField>
    <fullName>Milestone_age__c</fullName>
    <label>Milestone %age</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>