dynamix/force-app/main/default/objects/Payment_Plan_Milestones__c/fields/Milestone_Code__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Code__c</fullName>
    <label>Milestone Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>