dynamix/force-app/main/default/objects/Payment_Plan_Milestones__c/validationRules/Validation_on_Days_after_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Days_after_Booking</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Milestone_Activation__c, &apos;Booking Date&apos;), ISNULL(Days_after_Booking__c))</errorConditionFormula>
    <errorDisplayField>Days_after_Booking__c</errorDisplayField>
    <errorMessage>&apos;Days after Booking&apos; Field is mandatory. [As Milestone Activation is &apos;Booking Date&apos;]</errorMessage>
</ValidationRule>