dynamix/force-app/main/default/objects/Payment_Plan_Milestones__c/validationRules/Validation_on_Project_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Project_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Milestone_Activation__c ,&apos;Project Progress&apos;), ISBLANK( Project_Progress__c ))</errorConditionFormula>
    <errorDisplayField>Project_Progress__c</errorDisplayField>
    <errorMessage>&apos;Project Progress&apos; Field is mandatory. [As Milestone Activation is &apos;Project Progress&apos;]</errorMessage>
</ValidationRule>